--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 ################################################################################
 
 /.vs
+/Gym/.vs/Gym/v16
+/Gym/obj
+/Gym/bin/Debug/net5.0
