added model and created registration form

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@
 /Gym/.vs/Gym/v16
 /Gym/obj
 /Gym/bin/Debug/net5.0
+/Gym/.vs/Gym/DesignTimeBuild/.dtbcache.v2
+/GymModels/bin/Debug/net5.0
+/GymModels/obj
+/Gym/wwwroot/uploadedimages
